--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                 <h6 class="box__title">Початок після кінця</h6>
                 <p class="box__text">Брєндон Ли</p>
                 <div class="box__inside-2">
-                    <a href="" class="inside__link"><img src="./Image/facebook.png" alt="" width="80px"></a>
-                    <a href="" class="inside__link"><img src="./Image/instagram.com (2).png" alt="" width="70px"></a>
-                    <a href="" class="inside__link"><img src="./Image/discord.com (3).png" alt="" width="70px"></a>
+                    <a href="" class="inside-2__link"><img src="./Image/facebook.png" alt="" width="80px"></a>
+                    <a href="" class="inside-2__link"><img src="./Image/instagram.com (2).png" alt="" width="70px"></a>
+                    <a href="" class="inside-2__link"><img src="./Image/discord.com (3).png" alt="" width="70px"></a>
                 </div>
             </div>
             <div class="box__man">
@@ -156,9 +156,9 @@
                 <h6 class="box__title">Володар таємниць</h6>
                 <p class="box__text">Cullefish That Loves Diving</p>
                 <div class="box__inside-3">
-                    <a href="" class="inside__link"><img src="./Image/facebook.png" alt="" width="80px"></a>
-                    <a href="" class="inside__link"><img src="./Image/instagram.com (2).png" alt="" width="70px"></a>
-                    <a href="" class="inside__link"><img src="./Image/discord.com (3).png" alt="" width="70px"></a>
+                    <a href="" class="inside-3__link"><img src="./Image/facebook.png" alt="" width="80px"></a>
+                    <a href="" class="inside-3__link"><img src="./Image/instagram.com (2).png" alt="" width="70px"></a>
+                    <a href="" class="inside-3__link"><img src="./Image/discord.com (3).png" alt="" width="70px"></a>
                 </div>
             </div>
         </div>
